# rust-rest-api

./: Cargo.toml  README.md
src/: data.rs  endpoints.rs  main.rs  models.rs
src/consts/: mod.rs
src/data/: mod.rs
src/endpoints/: mod.rs  response_helpers.rs
src/models/: mod.rs
